src/test/deca/context/valid/provided/ContextSansObjet/IdentificationInt.deca
//Description :
//	identification de variables int et affectations de valeurs
//
//Résultats :
//	ok 


{
	int x;
	int y = 3;
	println(y);
	x = 0;
	y = x;
	println(x);
	println(y);
}