src/test/deca/context/invalid/elseIfTrueMultiples.deca
// Description:
//    tests de déclaration de booléen
//
// Resultats:
//    true

{
 	int x = 5;
 	if(x == 1){
 		println("x = 1");
 	} else if(x == 2){
 		println("x = 2");
 	}else if(x == 3){
 		println("x = 3");
 	}else if(x == 4){
 		println("x = 4");
 	}else if(x == 5){
 		println("x = 5");
 	}else if(x == 6){
 		println("x = 6");
 	}else if(x == 7){
 		println("x = 7");
 	}else{
 		println("autre");
 	}
}

